remove deprecated method